<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Group Message</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Sent</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="usn_hint">Enter Your USN</string>
    <string name="password_hint">Enter Your Password</string>
    <string name="login_btn_label">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="email_hint">Enter Your Email Address</string>
    <string name="register_btn_label">Register</string>
    <string name="registering_in_msg">Please Wait Signing You Up</string>
    <string name="error_title">Oops !! Some thing went wrong</string>
    <string name="action_logout">Logout</string>
    <string name="signing_in_msg">Please Wait Signing You in</string>
    <string name="empty_inbox">No New Messages</string>
    <string name="empty_sent">No Sent Messages</string>
    <string name="action_new_msg">New Message</string>
    <string name="title_activity_semester_select">Select Semester</string>
    <string name="title_activity_teacher_select">Select Teacher</string>
    <string name="action_username">username</string>
    <string name="title_activity_new_message">New Message</string>
    <string name="send_now_btn">Send Message</string>
    <string name="new_mess_hint">Your Message</string>
    <string name="title_activity_view_message">Message Details</string>
    <string name="subject_hint">Your Subject</string>
    <string name="empty_teacher">No Teachers to Select</string>
    <string name="title_activity_student_new_message">New Message</string>
    <string name="register_label">Dont Have Account ? Register</string>
    <string name="firstname">Enter Your First Name</string>
    <string name="no_new_msg">No New Messages</string>
    <string name="settings">Settings</string>
    <string name="empty_semester">No Semesters to Select</string>
    <string name="action_send_now">Send Now</string>
    <string name="title_activity_view_message_sent">ViewMessageSent</string>
    <string name="cancel_label">Cancel</string>


    //Student Preferences
    <string name="pref_title_add_friends_to_messages">Select Semester</string>
    <string name="action_attachment">Add Attachment</string>
    <string-array name="semesters_list_titles">
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Fourth</item>
        <item>Fifth</item>
        <item>Sixth</item>
    </string-array>
    <string-array name="semesters_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>
